[package]
name = "bevy_http_client"
description = "A simple HTTP client for Bevy"
version = "0.6.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/foxzool/bevy_http_client"
authors = ["FoxZoOL <zhooul@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "http", "plugin", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.14.0"
bevy_derive = "0.14.0"
bevy_hierarchy = "0.14.0"
bevy_ecs = { version = "0.14.0", features = ["multi_threaded"] }
bevy_tasks = "0.14.0"

crossbeam-channel = "0.5.11"
ehttp = { version = "0.5.0", features = ["native-async", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
doctest = false

[dev-dependencies]
bevy = { version = "0.14.0", default-features = false, features = ["multi_threaded"] }