[package]
name = "bevy_http_client"
description = "A simple HTTP client for Bevy"
version = "0.6.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/foxzool/bevy_http_client"
authors = ["FoxZoOL <zhooul@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "http", "plugin", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = {git = "https://github.com/bevyengine/bevy"}
bevy_derive = {git = "https://github.com/bevyengine/bevy"}
bevy_hierarchy = {git = "https://github.com/bevyengine/bevy"}
bevy_ecs = { git = "https://github.com/bevyengine/bevy", features = ["multi_threaded"] }
bevy_tasks = {git = "https://github.com/bevyengine/bevy"}

crossbeam-channel = "0.5.11"
ehttp = { version = "0.5.0", features = ["native-async", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
doctest = false

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
] }