[package]
name = "bevy_http_client"
description = "A simple HTTP client for Bevy"
version = "0.8.3"
edition = "2021"
readme = "README.md"
homepage = "https://crates.io/crates/bevy_http_client"
documentation = "https://docs.rs/bevy_http_client"
repository = "https://github.com/foxzool/bevy_http_client"
authors = ["FoxZoOL <zhooul@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "http", "plugin", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.17.0-rc.1"
bevy_derive = "0.17.0-rc.1"
#bevy_hierarchy = "0.16.0"
bevy_ecs = { version = "0.17.0-rc.1", features = ["multi_threaded"] }
bevy_tasks = "0.17.0-rc.1"
bevy_log = "0.17.0-rc.1"

crossbeam-channel = "0.5.11"
ehttp = { version = "0.5.0", features = ["native-async", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"



[dev-dependencies]
bevy = { version = "0.17.0-rc.1", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_log",
    "multi_threaded",
    "zstd_rust",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
] }